# freshview

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
crates/freshview-app/: Cargo.toml
crates/freshview-app/src/: lib.rs  main.rs  rpc_server.rs
crates/freshview-app/tests/: ui_integration.rs
crates/freshview-debug/: Cargo.toml
crates/freshview-debug/src/: main.rs
crates/freshview-editor/: Cargo.toml
crates/freshview-editor/src/: app.rs  input.rs  lib.rs  widget.rs
crates/freshview-editor/tests/: editor_perf.rs  input_tests.rs
crates/freshview-tester/: Cargo.toml
crates/freshview-tester/src/: main.rs
crates/freshview-viewer/: Cargo.toml
crates/freshview-viewer/src/: document.rs  lib.rs  renderer.rs  window.rs
crates/freshview-viewer/tests/: performance_tests.rs  viewer_tests.rs
docs/plans/: 2026-03-01-freshview-ide-design.md  2026-03-01-freshview-implementation-plan.md
