[workspace]
resolver = "2"
members = [
    "crates/freshview-app",
    "crates/freshview-editor",
    "crates/freshview-viewer",
]

[workspace.dependencies]
egui = "0.33"
eframe = "0.33"
egui_ratatui = "2.1"
soft_ratatui = { version = "0.1", features = ["unicodefonts"] }
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
