[workspace]
resolver = "2"
members = [
    "crates/freshview-app",
    "crates/freshview-editor",
    "crates/freshview-viewer",
]

[workspace.dependencies]
egui = "0.33"
eframe = "0.33"
egui_ratatui = "2.1"
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
log = "0.4"
mupdf = "0.6"
env_logger = "0.11"
fresh-editor = { path = "../fresh/crates/fresh-editor", default-features = false, features = ["runtime"] }
