[workspace]
resolver = "2"
members = [
    "crates/freshview-app",
    "crates/freshview-editor",
    "crates/freshview-viewer",
    "crates/freshview-debug",
    "crates/freshview-tester",
]

[workspace.dependencies]
egui = "0.30"
eframe = "0.30"
egui_ratatui = "2.1"
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
log = "0.4"
mupdf = "0.6"
sysinfo = "0.33"
env_logger = "0.11"
fresh-editor = { git = "https://github.com/sinelaw/fresh.git", default-features = false, features = ["runtime"] }
