[package]
name = "freshview-app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = "0.15"
freshview-editor = { path = "../freshview-editor" }
freshview-viewer = { path = "../freshview-viewer" }
sysinfo = "0.33"
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
