[package]
name = "freshview-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { workspace = true }
egui_ratatui = { workspace = true }
soft_ratatui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
fresh-editor = { workspace = true }
